--- a/Omal/Views/ConfigurationV.xaml
+++ b/Omal/Views/ConfigurationV.xaml
@@ -4,7 +4,7 @@
     xmlns:Converters ="clr-namespace:Omal.Converters"
     xmlns:Common="clr-namespace:Omal.Common"
     xmlns:CustomControls = "clr-namespace:Omal.CustomControls"
-    Title="{Binding TitoloImpostazioni}"
+    Title="{Binding TitoloImpostazioni, Converter={StaticResource UpperCaseConverter}}"
     x:Class="Omal.Views.ConfigurationV" BackgroundColor="White">
     <ContentPage.ToolbarItems>
         <Common:BindableToolbarItem IsVisible="{Binding IsLoggedIn, Converter={StaticResource InverseBooleanConverter}}" Text="{Binding LoginOrLogOutActionText}" Command="{Binding LoginOrLogoutCommand}" />
@@ -13,13 +13,27 @@
 	<ContentPage.Content>
     <StackLayout Margin="5">
             <ActivityIndicator IsRunning="{Binding IsRunning}" />
-            <Label Text="Database" Style="{StaticResource Titolo}" />
-            <Label Text="{Binding UltimoAggiornamento}" VerticalOptions="Center" />
-            <StackLayout Orientation="Horizontal">
-                <Label Text="{Binding LastUpdate}" VerticalOptions="Center"  HorizontalOptions="EndAndExpand"/>
-                <Button IsVisible="{Binding IsRunning, {Converter InverseBooleanConverter}" Command="{Binding UpdateDbCommand}" HorizontalOptions="EndAndExpand" Text="{Binding Aggiorna}" />
-            </StackLayout>
-            <CustomControls:HtmlFormattedLabel BackgroundColor="Black" FontSize="8" TextColor="Yellow"  VerticalOptions="StartAndExpand" IsVisible="{Binding IsRunning}" Text="{Binding UpdateDbText}"  Margin="5" />
+            <Label Text="{Binding TitoloAggiornaCatalogo, Converter={StaticResource UpperCaseConverter}}" Style="{StaticResource Titolo}" />
+            <Grid BackgroundColor="White">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="auto"/>
+            </Grid.ColumnDefinitions>
+                <Label Text="{Binding LastUpdate}" Grid.Column="0" VerticalOptions="Center"  HorizontalOptions="EndAndExpand"/>
+                <Button Style="{StaticResource Azzurro}" Grid.Column="1" IsVisible="{Binding IsRunning, {Converter InverseBooleanConverter}" Command="{Binding UpdateDbCommand}" HorizontalOptions="EndAndExpand" Text="{Binding Aggiorna, Converter={StaticResource UpperCaseConverter}}" />
+            </Grid>
+            <TableView Intent="Settings">
+    <TableRoot>
+        <TableSection>
+            <ViewCell Tapped="Handle_Tapped">
+                <StackLayout Orientation="Horizontal">
+                    <Label Text="{Binding StrLingua, Converter={StaticResource UpperCaseConverter}}" Margin="5" Style="{StaticResource Titolo}"  VerticalOptions="Center" />
+                    <Label Text="{Binding CurLang}" Margin="5" HorizontalOptions="EndAndExpand" VerticalOptions="Center"  />
+                </StackLayout>
+            </ViewCell>
+        </TableSection>
+    </TableRoot>
+</TableView>
     </StackLayout>
 	</ContentPage.Content>
 </ContentPage>
