--- a/Omal/Views/WelcomeV.xaml
+++ b/Omal/Views/WelcomeV.xaml
@@ -7,13 +7,20 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="2*" />
             <RowDefinition Height="10" />
+                <RowDefinition Height="30" />
         </Grid.RowDefinitions>
-        <Image VerticalOptions="StartAndExpand" HorizontalOptions="Center"  HeightRequest="90" BackgroundColor="#60A5D1" Source="LogoOmal" Margin="10"  />
-            <StackLayout Grid.Row="2" VerticalOptions="Start" Orientation="Vertical">
-            <Button  Text="Versione Italiana" HorizontalOptions="Fill" Clicked="Handle_Clicked_IT"></Button>
-            <Button HorizontalOptions="Fill" Text="English version" Clicked="Handle_Clicked_EN">English Version</Button>
-        </StackLayout>
-            <Label Grid.Row="2" VerticalOptions="End" FontFamily="Montserrat-Regular" FontSize="10" TextColor="White" HorizontalOptions="Center" Text="2018 Omal" />
+            <Grid.ColumnDefinitions >
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="120"/>
+                <ColumnDefinition Width="120" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+        <Image VerticalOptions="StartAndExpand" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" HorizontalOptions="Center"  HeightRequest="90" BackgroundColor="#60A5D1" Source="LogoOmal" Margin="10"  />
+            <StackLayout Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" VerticalOptions="Fill" Orientation="Vertical" HorizontalOptions="Fill">
+                <Button HorizontalOptions="Fill" Text="VERSIONE ITALIANA" Clicked="Handle_Clicked_IT" />
+                <Button HorizontalOptions="Fill" Text="ENGLISH VERSION"  Clicked="Handle_Clicked_EN" />
+            </StackLayout>
+            <Label Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" VerticalOptions="End" FontFamily="Montserrat-Regular" FontSize="10" TextColor="White" HorizontalOptions="Center" Text="2018 Omal" />
         </Grid>
 
 	</ContentPage.Content>
