--- a/Omal/Views/AnagraficheV.xaml
+++ b/Omal/Views/AnagraficheV.xaml
@@ -10,7 +10,7 @@
     </ContentPage.ToolbarItems>
   
         <RelativeLayout>
-    <Image  Aspect="AspectFill" Source="valvolaOMAL.png" Opacity="0.3"
+    <Image IsVisible="{Binding IsLoggedIn}" Aspect="AspectFill" Source="valvolaOMAL.png" Opacity="0.3"
                 RelativeLayout.WidthConstraint=
                   "{ConstraintExpression Type=RelativeToParent, Property=Width}"
                 RelativeLayout.HeightConstraint=
@@ -19,7 +19,8 @@
               "{ConstraintExpression Type=RelativeToParent, Property=Width}"
             RelativeLayout.HeightConstraint=
               "{ConstraintExpression Type=RelativeToParent, Property=Height}">
-          <StackLayout VerticalOptions="Center" Padding="6" Orientation="Vertical"  AbsoluteLayout.LayoutBounds="0.5, 0.5, -1, -1" AbsoluteLayout.LayoutFlags="PositionProportional">
+            
+          <StackLayout WidthRequest="240" VerticalOptions="Center" Padding="6" Orientation="Vertical"  AbsoluteLayout.LayoutBounds="0.5, 0.5, -1, -1" AbsoluteLayout.LayoutFlags="PositionProportional">
                 <Label IsVisible="{Binding IsLoggedIn, Converter={StaticResource InverseBooleanConverter}}" Margin="10" HorizontalTextAlignment="Center"  Text="{Binding LogonRichiesto}" />
                 <Button IsVisible="{Binding IsLoggedIn}" HorizontalOptions="Fill" Style="{StaticResource Azzurro}" Text="{Binding BtnClienti, Converter={StaticResource UpperCaseConverter}}" Command="{Binding GoToAnagraficaClientiCommand}" />
                 <Button IsVisible="{Binding IsLoggedIn}" HorizontalOptions="Fill" Style="{StaticResource Azzurro}" Text="{Binding BtnOrdini, Converter={StaticResource UpperCaseConverter}}" Command="{Binding GoToAnagraficaOrdiniCommand}" />
