--- a/Omal/Views/LoginV.xaml
+++ b/Omal/Views/LoginV.xaml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ContentPage Title="{Binding Title}" xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="Omal.Views.LoginV">
+<ContentPage xmlns:CControls="clr-namespace:Omal.CustomControls"
+    Title="{Binding CurTitle, Converter={StaticResource UpperCaseConverter}}"  xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="Omal.Views.LoginV">
     <ContentPage.ToolbarItems>
     </ContentPage.ToolbarItems>
     <ContentPage.Padding>
@@ -7,26 +8,25 @@
     </ContentPage.Padding>
 	<ContentPage.Content>
           <RelativeLayout>
-    <Image  Aspect="AspectFill" Source="valvolaOMAL.png" Opacity="0.3"
+    <Image IsVisible="{Binding IsLoggedIn}"  Aspect="AspectFill" Source="valvolaOMAL.png" Opacity="0.3"
                 RelativeLayout.WidthConstraint=
                   "{ConstraintExpression Type=RelativeToParent, Property=Width}"
                 RelativeLayout.HeightConstraint=
                   "{ConstraintExpression Type=RelativeToParent, Property=Height}"/>
-    <Grid RelativeLayout.WidthConstraint=
+            <Label Margin="5" HorizontalTextAlignment="Center" Style="{StaticResource Descrizione}" VerticalOptions="Start" Text="{Binding LogonTesto}" />
+     <Grid RelativeLayout.WidthConstraint=
               "{ConstraintExpression Type=RelativeToParent, Property=Width}"
             RelativeLayout.HeightConstraint=
               "{ConstraintExpression Type=RelativeToParent, Property=Height}">
-   
-        <StackLayout Orientation="Vertical" Padding="20">
-        <Label HorizontalOptions="Center" Style="{StaticResource Descrizione}"  Text="{Binding LogonTesto}" />
-
-            <Entry Margin="0,0,0,0" Style="{StaticResource WhiteEntry}" x:Name="UserName"  Placeholder="Indirizzo Email" Text="{Binding Email}" />
-            <Entry Style="{StaticResource WhiteEntry}" x:Name="Password" Placeholder="Password" IsPassword="true" Text="{Binding Password}" />
+          <StackLayout VerticalOptions="Center" Padding="6" Orientation="Vertical"  AbsoluteLayout.LayoutBounds="0.5, 0.5, -1, -1" AbsoluteLayout.LayoutFlags="PositionProportional">
+             
+            <CControls:CualevaRoundedEntry LeftPadding="10" Margin="5" BorderRadius="25" HeightRequest="50" CualevaRoundedEntryBackgroundColor="#FFFFFF"   Style="{StaticResource WhiteEntry}" x:Name="UserName"  Placeholder="Indirizzo Email" Text="{Binding Email}" />
+            <CControls:CualevaRoundedEntry LeftPadding="10" Margin="5" BorderRadius="25" HeightRequest="50" CualevaRoundedEntryBackgroundColor="#FFFFFF" Style="{StaticResource WhiteEntry}"  x:Name="Password" Placeholder="Password" IsPassword="true" Text="{Binding Password}" />
             <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
                 <Button x:Name="LoginBtn" Style="{StaticResource Azzurro}"  Text="{Binding LoginButton, Converter={StaticResource UpperCaseConverter}}" Command="{Binding LoginCommand}" />
             </StackLayout>
             <Label Text="{Binding Errore}" TextColor="Red" />
-        </StackLayout>
+            </StackLayout>
     </Grid>
        </RelativeLayout>
 	</ContentPage.Content>
