--- a/Omal/Views/SearchProductV.xaml
+++ b/Omal/Views/SearchProductV.xaml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage  BackgroundColor="White"
     xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="Omal.Views.SearchProductV" 
-              Title="{Binding CurTitle, Converter={StaticResource UpperCaseConverter}}">
+              Title="{Binding CurTitle, Converter={StaticResource UpperCaseConverter}}"
+              xmlns:CControls="clr-namespace:Omal.CustomControls"
+              >
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="{Binding LoginOrLogOutActionText}" Command="{Binding LoginOrLogoutCommand}" />
     </ContentPage.ToolbarItems>
@@ -16,18 +18,33 @@
                 </Grid.RowDefinitions>
             
         <StackLayout Grid.Row="0" Orientation="Vertical" BackgroundColor="#EAEAEA">
-            <Label Margin="5" Style="{StaticResource Titolo}" Text="{Binding CurProdotto.nome}"  HorizontalOptions="Fill" HorizontalTextAlignment="Center" />
+            <Label Margin="5" Style="{StaticResource Titolo}" FontSize="20" Text="{Binding CurProdotto.nome}"  HorizontalOptions="Fill" HorizontalTextAlignment="Center" />
         </StackLayout>
         <StackLayout Grid.Row="1" Orientation="Vertical" BackgroundColor="#FFFFFF">
-            <Image HorizontalOptions="Center" Margin="5" HeightRequest="100" Source="{Binding CurProdotto.immagine_placeholder}" />
-            <Button Margin="5" Style="{StaticResource Azzurro}" TextColor="White" Text="{Binding BtnMaggioriInfo, Converter={StaticResource UpperCaseConverter}}" HorizontalOptions="Fill" Command="{Binding GoToDetailCommand}" />                
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition Width="50"/>
+                            <ColumnDefinition Width="200" />
+                            <ColumnDefinition Width="50" />
+                            <ColumnDefinition />
+    
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="55" />
+                        </Grid.RowDefinitions>
+                        <Image Grid.Row="0" Grid.Column="2" HorizontalOptions="Center" Margin="5" HeightRequest="100" Source="{Binding CurProdotto.immagine_placeholder}" />
+                        <Button  Grid.Row="1"  Grid.Column="1" Grid.ColumnSpan="3"  Style="{StaticResource Azzurro}" TextColor="White" Text="{Binding BtnMaggioriInfo, Converter={StaticResource UpperCaseConverter}}" HorizontalOptions="FillAndExpand" Command="{Binding GoToDetailCommand}" />                
+                    </Grid>
+            
         </StackLayout>
         <StackLayout Grid.Row="2" Orientation="Vertical" BackgroundColor="#EAEAEA">
             <Label Margin="0,10,0,0" HorizontalTextAlignment="Center" Style="{StaticResource Titolo}" Text="{Binding StrTrovaArticolo}" />
-            <Picker Margin="5,0,5,0" Title="{Binding DescrizionePicker1}" IsVisible="{Binding Picker1IsVisible}" HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedPicker1}" ItemsSource="{Binding Picker1}"  />
-            <Picker Margin="5,0,5,0" Title="{Binding DescrizionePicker2}" IsVisible="{Binding Picker2IsVisible}" HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedPicker2}" ItemsSource="{Binding Picker2}"  />
-            <Picker Margin="5,0,5,0" Title="{Binding DescrizionePicker3}" IsVisible="{Binding Picker3IsVisible}" HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedPicker3}" ItemsSource="{Binding Picker3}"  />
-            <Picker Margin="5,0,5,0" Title="{Binding DescrizionePicker4}" IsVisible="{Binding Picker4IsVisible}"  HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedPicker4}" ItemsSource="{Binding Picker4}"  />
+            <CControls:CualevaPicker Margin="5,0,5,0" Title="{Binding DescrizionePicker1}" IsVisible="{Binding Picker1IsVisible}" HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedPicker1}" ItemsSource="{Binding Picker1}"  />
+            <CControls:CualevaPicker Margin="5,0,5,0" Title="{Binding DescrizionePicker2}" IsVisible="{Binding Picker2IsVisible}" HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedPicker2}" ItemsSource="{Binding Picker2}"  />
+            <CControls:CualevaPicker Margin="5,0,5,0" Title="{Binding DescrizionePicker3}" IsVisible="{Binding Picker3IsVisible}" HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedPicker3}" ItemsSource="{Binding Picker3}"  />
+            <CControls:CualevaPicker Margin="5,0,5,0" Title="{Binding DescrizionePicker4}" IsVisible="{Binding Picker4IsVisible}"  HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedPicker4}" ItemsSource="{Binding Picker4}"  />
             <StackLayout Margin="5" HorizontalOptions="Center"  Orientation="Horizontal">
                 <Button IsVisible="{Binding Picker2IsVisible}" Text="{Binding StrBtnPulisci, Converter={StaticResource UpperCaseConverter}}" Command="{Binding PulisciCommand}" />                
                 <Button Text="{Binding BtnTrova, Converter={StaticResource UpperCaseConverter}}" Style="{StaticResource Azzurro}" Command="{Binding CercaArticoliCommand}" IsVisible="{Binding MoreThanOneAtrticle}" />                
