--- a/Omal/Views/SearchV.xaml
+++ b/Omal/Views/SearchV.xaml
@@ -19,14 +19,14 @@
             </Grid.RowDefinitions>
 
             <StackLayout  VerticalOptions="Fill" Grid.Row="0" BackgroundColor="#EAEAEA" Margin="0,0,0,0" Orientation="Vertical">
-                <Picker Margin="10,50,10,10" Title="{Binding ProdottoPicker1}" BackgroundColor="White" HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedPrimoLivello}" ItemsSource="{Binding PrimoLivello}"  />
-                <Picker Margin="10" Title="{Binding ProdottoPicker2}" IsVisible="{Binding Picker2IsVisible}" BackgroundColor="White" HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedSecondoLivello}" ItemsSource="{Binding SecondoLivello}" />
-                <Picker Margin="10" Title="{Binding ProdottoPicker3}" IsVisible="{Binding Picker3IsVisible}" BackgroundColor="White" HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedTerzoLivello}" ItemsSource="{Binding TerzoLivello}" />
+                <CControls:CualevaPicker  Margin="8,50,10,10" Title="{Binding ProdottoPicker1}" BackgroundColor="White" HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedPrimoLivello}" ItemsSource="{Binding PrimoLivello}"  />
+                <CControls:CualevaPicker  Margin="8" Title="{Binding ProdottoPicker2}" IsVisible="{Binding Picker2IsVisible}" BackgroundColor="White" HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedSecondoLivello}" ItemsSource="{Binding SecondoLivello}" />
+                <CControls:CualevaPicker Margin="8" Title="{Binding ProdottoPicker3}" IsVisible="{Binding Picker3IsVisible}" BackgroundColor="White" HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedTerzoLivello}" ItemsSource="{Binding TerzoLivello}" />
                 <Button Text="{Binding BtnCerca, Converter={StaticResource UpperCaseConverter}}" HorizontalOptions="Center"  Command="{Binding SearchWithCategoriesCommand }" Margin="0,10,0,50"/>
             </StackLayout>
             <Image Grid.Row="1"  Aspect="AspectFill" Source="valvolaOMAL.png" Opacity="0.3" />
             <StackLayout  VerticalOptions="EndAndExpand" Grid.Row="1" Margin="0,0,0,0" BackgroundColor="Transparent"  Orientation="Vertical">
-                <CControls:CualevaRoundedEntry BorderRadius="25" HeightRequest="50" CualevaRoundedEntryBackgroundColor="#60A5D1"  LeftPadding="10" Margin="5" TextColor="White"  BackgroundColor="Transparent" Placeholder="{Binding ProdottoRicercato}" Text="{Binding ProductNameFilter, Mode=TwoWay}" >
+            <CControls:CualevaRoundedEntry Margin="30,5,30,5" BorderRadius="25" HeightRequest="50" CualevaRoundedEntryBackgroundColor="#60A5D1"  LeftPadding="10"  TextColor="White"  BackgroundColor="Transparent" Placeholder="{Binding ProdottoRicercato}" Text="{Binding ProductNameFilter, Mode=TwoWay}" >
                     </CControls:CualevaRoundedEntry>
                 <Button HorizontalOptions="Center" Margin="10" Command="{Binding SearchWithProductNameCommand, Mode=TwoWay}" Text="{Binding BtnCerca, Converter={StaticResource UpperCaseConverter}}" />
             </StackLayout>
