--- a/Omal/Views/BasketV.xaml
+++ b/Omal/Views/BasketV.xaml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage 
+    xmlns:CControls="clr-namespace:Omal.CustomControls"
     xmlns="http://xamarin.com/schemas/2014/forms" 
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="Omal.Views.BasketV" Title="{Binding TitoloCarrello, Converter={StaticResource UpperCaseConverter}}">
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="{Binding LoginOrLogOutActionText}" Command="{Binding LoginOrLogoutCommand}" />
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
-        <StackLayout Orientation="Vertical" Margin="10">
+        <StackLayout Orientation="Vertical" Margin="5">
         <Label IsVisible="{Binding IsLoggedIn, Converter={StaticResource InverseBooleanConverter}}" Text="{Binding LogonRichiesto}" />
         <ListView VerticalOptions="FillAndExpand" IsVisible="{Binding IsLoggedIn}" ItemsSource="{Binding Items}" SelectedItem="{Binding SelectedItem,Mode=TwoWay}">
         <ListView.RowHeight>
@@ -16,18 +17,35 @@
                 </OnPlatform>
                 </ListView.RowHeight>
         <ListView.Header>
-            <StackLayout BackgroundColor="#EAEAEA" Margin="5">
-                <Picker Title="{Binding Cliente}" HorizontalOptions="Fill" ItemDisplayBinding="{Binding RagioneSociale}" SelectedItem="{Binding SelectedCliente}" ItemsSource="{Binding Clienti}"  />
-                <Entry  BackgroundColor="White" Placeholder="{Binding Note}" Text="{Binding NoteOrdine}" />
-                <StackLayout Orientation="Horizontal" >
-                    <Label VerticalOptions="Center" Style="{StaticResource Descrizione}"  Text="{Binding StrTotaleOrdine}" FontSize="18" TextColor="#004899" />    
-                    <Label VerticalOptions="Center" Text="{Binding TotaleOrdine, StringFormat='€ {0:F}'}" HorizontalOptions="EndAndExpand" FontAttributes="Bold" FontSize="18" />
-                </StackLayout>
-                <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
+            <StackLayout BackgroundColor="#EAEAEA">
+                <Grid Margin="10">
+                            <Grid.ColumnDefinitions >
+                                <ColumnDefinition Width="130"/>
+                                <ColumnDefinition Width="10" />
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="75" />
+                                <ColumnDefinition Width="10" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                        
+                    <CControls:CualevaPicker Grid.ColumnSpan="6" Grid.Row="0" Title="{Binding Cliente}" HorizontalOptions="Fill" ItemDisplayBinding="{Binding RagioneSociale}" SelectedItem="{Binding SelectedCliente}" ItemsSource="{Binding Clienti}"  />
+                    <Entry HorizontalTextAlignment="End"  Grid.Row="1" WidthRequest="70" HeightRequest="40" Grid.ColumnSpan="6" HorizontalOptions="Fill" BackgroundColor="White" Placeholder="{Binding Note}"  Text="{Binding NoteOrdine}" />              
+                    <Label Grid.Row="2" Grid.ColumnSpan="6" Margin="10" HorizontalOptions="StartAndExpand" Style="{StaticResource Descrizione}" Text="{Binding NumeroCarrelli}"  />
+                    <Label FontSize="14" Grid.Row="3" Grid.Column="0" VerticalOptions="Center" Style="{StaticResource Titolo}"  Text="{Binding StrTotaleOrdine}"  TextColor="#004899" />    
+                    <Label Grid.Row="3" Grid.Column="2" VerticalOptions="Center" Style="{StaticResource Descrizione}"  Text="{Binding StrSconto}"  />    
+                    <Entry HorizontalTextAlignment="End"  HeightRequest="40" Grid.Row="3" Grid.Column="3" Text="" BackgroundColor="White" WidthRequest="70" />            
+                    <Label FontSize="14" Grid.Row="3" Grid.Column="5"  VerticalOptions="Center" Text="{Binding TotaleOrdine, StringFormat='€ {0:F}'}" HorizontalOptions="EndAndExpand" FontAttributes="Bold"  />
+
+                    <Label FontSize="14" Grid.Row="4" Grid.Column="0" VerticalOptions="Center" Style="{StaticResource Titolo}"  Text="{Binding StrTotaleOrdineSconto}"  TextColor="#004899" />            
+                    <Label FontSize="14" Grid.Row="4" Grid.Column="5"  VerticalOptions="Center" Text="{Binding TotaleOrdine, StringFormat='€ {0:F}'}" HorizontalOptions="EndAndExpand" FontAttributes="Bold"  />
+                
+                <StackLayout Grid.Row="5" Grid.ColumnSpan="6" Orientation="Horizontal" HorizontalOptions="Center">
                     <Button  Text="Salva" Command="{Binding SalvaCommand}" Style="{StaticResource Azzurro}" /> 
                     <Button  Text="Invia" Command="{Binding InviaCommand}" Style="{StaticResource Azzurro}"  />
                     <Button  Text="Annulla" Command="{Binding AnnullaCommand}" />
                 </StackLayout>
+                    </Grid>
+                
             </StackLayout>
         </ListView.Header>
         <ListView.ItemTemplate>
@@ -35,35 +53,32 @@
                  <ViewCell>
                     <Grid Margin="10" BackgroundColor="White">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition />    
-                            <ColumnDefinition Width="40"/>    
-                            <ColumnDefinition Width="70"/>
-                            <ColumnDefinition />
-                            <ColumnDefinition />
+                                <ColumnDefinition Width="130"/>
+                                <ColumnDefinition Width="10" />
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="75" />
+                                <ColumnDefinition Width="10" />
+                                <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="*" />
                         </Grid.RowDefinitions>
-                        <Label Grid.Row="0" Grid.ColumnSpan="3" Text="{Binding CodiceArticolo}" HorizontalTextAlignment="Center" Style="{StaticResource Descrizione}" />
-                        <Label Grid.Row="1" Grid.Column="1" Text="QTA"  VerticalOptions="Center" Style="{StaticResource Descrizione}" />
-                        <Entry WidthRequest="70" TextColor="#004899" BackgroundColor="#EAEAEA"  Keyboard="Numeric"  Grid.Row="1" Grid.Column="2" VerticalOptions="Center" HorizontalOptions="Start" Placeholder="{Binding StrQta}" Text="{Binding Qta}"/>
-                        <Label Grid.Row="1" Grid.Column="3" Text="SCONTO" Style="{StaticResource Descrizione}"    VerticalOptions="Center" HorizontalTextAlignment="Start"/>
-                        <Entry Grid.Row="1" Grid.Column="4" VerticalOptions="Center" Placeholder="{Binding StrSconto}" Text="{Binding Sconto}" TextColor="#004899" BackgroundColor="#EAEAEA" Keyboard="Numeric"  MinimumWidthRequest="100" />
-                        <Label   FontSize="14"
-                                        HorizontalOptions="StartAndExpand"
-                                         Grid.Row="1" Grid.Column="0" VerticalOptions="Center" HorizontalTextAlignment="Start" Text="{Binding PrezzoUnitario, StringFormat='€ {0:F}'}" Style="{StaticResource Titolo}"
-                                         />
-                     <Label FontSize="11" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="5" HorizontalOptions="CenterAndExpand"  VerticalOptions="Center" Text="{Binding PrezzoTotaleStr}" />            
+                        <Label Grid.Row="0" Grid.ColumnSpan="6" Text="{Binding CodiceArticolo}" HorizontalTextAlignment="Start" Style="{StaticResource Descrizione}" />
+                        <StackLayout Orientation="Horizontal" Grid.Row="1" Grid.Column="0" >
+                            <Label Text="QTA"  VerticalOptions="Center" Style="{StaticResource Descrizione}" />
+                            <Entry HorizontalTextAlignment="End"  WidthRequest="70" HeightRequest="40" TextColor="#004899" BackgroundColor="#EAEAEA"  Keyboard="Numeric"   VerticalOptions="Center" HorizontalOptions="Start" Placeholder="{Binding StrQta}" Text="{Binding Qta}"/>
+                        </StackLayout>
+                        <Label Grid.Row="1" Grid.Column="2" Text="Sconto"  Style="{StaticResource Descrizione}" VerticalOptions="Center" HorizontalTextAlignment="Start"/>
+                        <Entry HorizontalTextAlignment="End"  WidthRequest="70" Grid.Column="3"  HeightRequest="40" Grid.Row="1" VerticalOptions="Center"   Placeholder="{Binding StrSconto}" Text="{Binding Sconto}" TextColor="#004899" BackgroundColor="#EAEAEA" Keyboard="Numeric"  MinimumWidthRequest="100" />
+                        <Label FontSize="14" Grid.Row="1" Grid.Column="5"  VerticalOptions="Center" Text="{Binding PrezzoUnitario, StringFormat='€ {0:F}'}" HorizontalOptions="EndAndExpand" FontAttributes="Bold"  />
+                        <Label FontSize="11" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="5" HorizontalOptions="CenterAndExpand"  VerticalOptions="Center" Text="{Binding PrezzoTotaleStr}" />            
 
                     </Grid>
                 </ViewCell>
             </DataTemplate>
         </ListView.ItemTemplate>
-        <ListView.Footer>
-            <Label Margin="10" HorizontalOptions="CenterAndExpand" Style="{StaticResource Descrizione}" Text="{Binding NumeroCarrelli}"  />
-        </ListView.Footer>
             </ListView>
         </StackLayout>
           
